Break out nested streaming operations